<resources>
    <string name="app_name" translatable="false">FirstApp</string>
    <string name="ma_chaine">Hello</string>
    <string name="like">I like</string>
    <string name="dislike">I dislike</string>
    <string name="object">Object :</string>
    <string name="name">Your name here</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="next">next</string>
    <string name="title_activity_service_ex" translatable="false">ServiceExActivity</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="contacts">Contacts</string>
    <string name="load">Load</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="code">code</string>
    <string name="title_activity_maps">Map</string>
</resources>
